fixed overflow error

--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ h2.section-title {
     background-color: rgb(31, 30, 30);
     width: 100vw;
     height: 100vh;
-    left: 100%;
+    left: -200%;
     top: 0;
     display: flex;
     flex-direction: column;
